Fixed some errors and path problems in html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- Define an exports object so the Node.js module exports don't cause an error -->
   <script>const exports = {};</script>
-  <script src="/dc.js"></script>
-  <script src="/html_interface.js"></script>
+  <script src="dc.js"></script>
+  <script src="html_interface.js"></script>
 
   <title>dc.js</title>
 </head>
