--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <title>About dc.js</title>
 </head>
@@ -11,8 +11,8 @@
   <header>
     <h1>What is this?</h1>
     <nav>
-      <a href="/index.html">dc</a>
-      <a href="/errata.html">Errata</a>
+      <a href="index.html">dc</a>
+      <a href="errata.html">Errata</a>
     </nav>
   </header>
   <p>
