--- a/errata.html
+++ b/errata.html
@@ -4,14 +4,16 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="errata_files/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <title>dc.js - Errata</title>
 </head>
 <body>
   <header>
     <h1>Errata</h1>
-    <nav><a href="http://localhost:8000/index.html">dc</a></nav>
+    <nav>
+      <a href="index.html">dc</a>
+    </nav>
   </header>
   <ul>
     <li>
