Fixed one final html path problem

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header>
     <h1>dc</h1>
     <nav>
-      <a href="/about.html">What is this?</a>
+      <a href="about.html">What is this?</a>
     </nav>
   </header>
   <button id="clear">Clear the display</button>
