Noted floating point errors in errata

--- a/errata.html
+++ b/errata.html
@@ -23,8 +23,9 @@
     </li><li>
       The original dc provides arbitrary-precision arithmetic. This
       implementation currently relies on JavaScript's fixed-precision
-      Number primitives for arithmetic. I'd like to fix this at some point,
-      but it's not a priority.
+      Number primitives for arithmetic. Because of this, you may notice some
+      floating point errors. I'd like to fix this at some point, but it's not a
+      priority.
     </li><li>
       Commands that interact with the shell such as `!`, `?`, and `e` have not
       and likely will not be implemented.
